fix: add sharp to optimize images

--- a/src/pages/carta.astro
+++ b/src/pages/carta.astro
@@ -43,14 +43,14 @@ const alergenos = [
           <Dish
             title='Vino'
             description='Vino con aroma de uva sacada con los pies'
-            img='vino.png'
+            img='vino.webp'
             price={4.99}
           />
 
           <Dish
             title='Vino'
             description='Vino con aroma de uva sacada con los pies'
-            img='vino.png'
+            img='vino.webp'
             price={4.99}
           />
         </div>
@@ -62,35 +62,35 @@ const alergenos = [
           <Dish
             title='Plato'
             description='No sé que lleva este plato pero tiene pinta de estar de locos'
-            img='comida.png'
+            img='comida.webp'
             price={11.99}
           />
 
           <Dish
             title='Plato'
             description='No sé que lleva este plato pero tiene pinta de estar de locos'
-            img='comida.png'
+            img='comida.webp'
             price={11.99}
           />
 
           <Dish
             title='Plato'
             description='No sé que lleva este plato pero tiene pinta de estar de locos'
-            img='comida.png'
+            img='comida.webp'
             price={11.99}
           />
 
           <Dish
             title='Plato'
             description='No sé que lleva este plato pero tiene pinta de estar de locos'
-            img='comida.png'
+            img='comida.webp'
             price={11.99}
           />
 
           <Dish
             title='Plato'
             description='No sé que lleva este plato pero tiene pinta de estar de locos'
-            img='comida.png'
+            img='comida.webp'
             price={11.99}
           />
         </div>
@@ -102,35 +102,35 @@ const alergenos = [
           <Dish
             title='Plato'
             description='No sé que lleva este plato pero tiene pinta de estar de locos'
-            img='comida.png'
+            img='comida.webp'
             price={11.99}
           />
 
           <Dish
             title='Plato'
             description='No sé que lleva este plato pero tiene pinta de estar de locos'
-            img='comida.png'
+            img='comida.webp'
             price={11.99}
           />
 
           <Dish
             title='Plato'
             description='No sé que lleva este plato pero tiene pinta de estar de locos'
-            img='comida.png'
+            img='comida.webp'
             price={11.99}
           />
 
           <Dish
             title='Plato'
             description='No sé que lleva este plato pero tiene pinta de estar de locos'
-            img='comida.png'
+            img='comida.webp'
             price={11.99}
           />
 
           <Dish
             title='Plato'
             description='No sé que lleva este plato pero tiene pinta de estar de locos'
-            img='comida.png'
+            img='comida.webp'
             price={11.99}
           />
         </div>
@@ -142,35 +142,35 @@ const alergenos = [
           <Dish
             title='Plato'
             description='No sé que lleva este plato pero tiene pinta de estar de locos'
-            img='comida.png'
+            img='comida.webp'
             price={11.99}
           />
 
           <Dish
             title='Plato'
             description='No sé que lleva este plato pero tiene pinta de estar de locos'
-            img='comida.png'
+            img='comida.webp'
             price={11.99}
           />
 
           <Dish
             title='Plato'
             description='No sé que lleva este plato pero tiene pinta de estar de locos'
-            img='comida.png'
+            img='comida.webp'
             price={11.99}
           />
 
           <Dish
             title='Plato'
             description='No sé que lleva este plato pero tiene pinta de estar de locos'
-            img='comida.png'
+            img='comida.webp'
             price={11.99}
           />
 
           <Dish
             title='Plato'
             description='No sé que lleva este plato pero tiene pinta de estar de locos'
-            img='comida.png'
+            img='comida.webp'
             price={11.99}
           />
         </div>
@@ -182,35 +182,35 @@ const alergenos = [
           <Dish
             title='Plato'
             description='No sé que lleva este plato pero tiene pinta de estar de locos'
-            img='comida.png'
+            img='comida.webp'
             price={11.99}
           />
 
           <Dish
             title='Plato'
             description='No sé que lleva este plato pero tiene pinta de estar de locos'
-            img='comida.png'
+            img='comida.webp'
             price={11.99}
           />
 
           <Dish
             title='Plato'
             description='No sé que lleva este plato pero tiene pinta de estar de locos'
-            img='comida.png'
+            img='comida.webp'
             price={11.99}
           />
 
           <Dish
             title='Plato'
             description='No sé que lleva este plato pero tiene pinta de estar de locos'
-            img='comida.png'
+            img='comida.webp'
             price={11.99}
           />
 
           <Dish
             title='Plato'
             description='No sé que lleva este plato pero tiene pinta de estar de locos'
-            img='comida.png'
+            img='comida.webp'
             price={11.99}
           />
         </div>
@@ -222,35 +222,35 @@ const alergenos = [
           <Dish
             title='Plato'
             description='No sé que lleva este plato pero tiene pinta de estar de locos'
-            img='comida.png'
+            img='comida.webp'
             price={11.99}
           />
 
           <Dish
             title='Plato'
             description='No sé que lleva este plato pero tiene pinta de estar de locos'
-            img='comida.png'
+            img='comida.webp'
             price={11.99}
           />
 
           <Dish
             title='Plato'
             description='No sé que lleva este plato pero tiene pinta de estar de locos'
-            img='comida.png'
+            img='comida.webp'
             price={11.99}
           />
 
           <Dish
             title='Plato'
             description='No sé que lleva este plato pero tiene pinta de estar de locos'
-            img='comida.png'
+            img='comida.webp'
             price={11.99}
           />
 
           <Dish
             title='Plato'
             description='No sé que lleva este plato pero tiene pinta de estar de locos'
-            img='comida.png'
+            img='comida.webp'
             price={11.99}
           />
         </div>
@@ -262,35 +262,35 @@ const alergenos = [
           <Dish
             title='Plato'
             description='No sé que lleva este plato pero tiene pinta de estar de locos'
-            img='comida.png'
+            img='comida.webp'
             price={11.99}
           />
 
           <Dish
             title='Plato'
             description='No sé que lleva este plato pero tiene pinta de estar de locos'
-            img='comida.png'
+            img='comida.webp'
             price={11.99}
           />
 
           <Dish
             title='Plato'
             description='No sé que lleva este plato pero tiene pinta de estar de locos'
-            img='comida.png'
+            img='comida.webp'
             price={11.99}
           />
 
           <Dish
             title='Plato'
             description='No sé que lleva este plato pero tiene pinta de estar de locos'
-            img='comida.png'
+            img='comida.webp'
             price={11.99}
           />
 
           <Dish
             title='Plato'
             description='No sé que lleva este plato pero tiene pinta de estar de locos'
-            img='comida.png'
+            img='comida.webp'
             price={11.99}
           />
         </div>
@@ -302,35 +302,35 @@ const alergenos = [
           <Dish
             title='Plato'
             description='No sé que lleva este plato pero tiene pinta de estar de locos'
-            img='comida.png'
+            img='comida.webp'
             price={11.99}
           />
 
           <Dish
             title='Plato'
             description='No sé que lleva este plato pero tiene pinta de estar de locos'
-            img='comida.png'
+            img='comida.webp'
             price={11.99}
           />
 
           <Dish
             title='Plato'
             description='No sé que lleva este plato pero tiene pinta de estar de locos'
-            img='comida.png'
+            img='comida.webp'
             price={11.99}
           />
 
           <Dish
             title='Plato'
             description='No sé que lleva este plato pero tiene pinta de estar de locos'
-            img='comida.png'
+            img='comida.webp'
             price={11.99}
           />
 
           <Dish
             title='Plato'
             description='No sé que lleva este plato pero tiene pinta de estar de locos'
-            img='comida.png'
+            img='comida.webp'
             price={11.99}
           />
         </div>
