--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,6 +1,6 @@
 ---
 import { Image } from 'astro:assets'
-import logoImg from '@/assets/images/logo.png'
+import logoImg from '../assets/images/logo.webp'
 import HeaderNavMenu from '@/components/HeaderNavMenu.astro'
 import HeaderNavMenuMobile from '@/components/HeaderNavMenuMobile.astro'
 ---
