--- a/src/components/Logo.astro
+++ b/src/components/Logo.astro
@@ -1,6 +1,6 @@
 ---
 import { Image } from 'astro:assets'
-import logoImg from '@/assets/images/logo.png'
+import logoImg from '@/assets/images/logo.webp'
 
 interface Props {
   width?: number
